Fixed downloads stuck in Popup Downloads when failed. Improve how handles failed downloads.

--- a/src/WordReplacer.UI/wwwroot/css/app.css
+++ b/src/WordReplacer.UI/wwwroot/css/app.css
@@ -91,6 +91,10 @@ a, .btn-link {
     color: var(--mdc-theme-secondary);
 }
 
+.error-color {
+    color: #fc4d4d;
+}
+
 .small-radius{
     border-radius: 3%;   
 }
